# advanced-peripherals-util

./: CHANGELOG.md  LICENSE  README.md  advanced-peripherals-util.cabal  flake.nix
app/: Animation.hs  BlockTexture.hs  Main.hs
app/Animation/: Continuous.hs  Procedural.hs
app/BlockTexture/: Builder.hs
app/BlockTexture/Builder/: AdvancedPeripherals.hs
app/Commands/: GenerateTextures.hs
app/Control/Monad/: Require.hs
app/Data/Functor/: Adjunction.hs  Flow.hs
app/Graphics/Image/: Extra.hs
app/Graphics/Image/Processing/: Extra.hs
app/Numeric/Noise/: Extra.hs
