cabal-version:      3.0
name:               advanced-peripherals-util
version:            0.1.0.0
synopsis:
    A maintenance script for the AdvancedPeripherals Minecraft mod

license:            BSD-3-Clause
license-file:       LICENSE
author:             sjeulu
maintainer:         sjeulu@proton.me
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable advanced-peripherals-util
    import:           warnings
    main-is:          Main.hs
    other-modules:
      Data.Functor.Flow,
      Data.Functor.Adjunction,
      Numeric.Noise.Extra,
      Control.Monad.Require,
      Graphics.Image.Extra,
      Graphics.Image.Processing.Extra,
      Commands.GenerateTextures,
      Animation,
      Animation.Procedural,
      Animation.Continuous,
      BlockTexture,
      BlockTexture.Builder,
      BlockTexture.Builder.AdvancedPeripherals,
    build-depends:
      base ^>=4.18.2.1,
      extra >=1.7,
      flow >=2.0.0.5,
      yjtools >=0.9.18,
      cond >=0.5.1,
      containers >=0.4.0.0,
      bifunctors >=5.5.11,
      mtl >=2.3.1,
      lens >=5.2.3,
      -- >=2.1.1,
      bytestring >=0.11.1.0,
      text,
      neat-interpolation >=0.3.2.1,
      optparse-applicative >=0.18.1.0,
      hip >=1.5.6.0,
      random >=1.1,
      pure-noise >=0.1.0.1,
      aeson >=2.1.2.1,
      prettyprinter >=1.7.1,
      prettyprinter-ansi-terminal >=1.1.3,
      -- >=1.5.2.0,
      filepath , 
      directory >=1.3.8.3,
      process >=1.6.19.0,
      temporary >=1.3,
    hs-source-dirs:   app
    default-language: GHC2021
    default-extensions:
      QuasiQuotes,
      BlockArguments,
      OverloadedStrings,
      OverloadedLists,
      QuasiQuotes,
      UndecidableSuperClasses,
      LambdaCase,
      ViewPatterns,
      MultiWayIf,
      ImplicitParams,
      ImpredicativeTypes,
      TemplateHaskell,
